--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,24 @@
 <!--
     Angular's interpolation binding syntax: {{ }} same as Angular Express
       binds the class model to the template: 1-way data binding
--->
-<h1>{{title}}</h1>
-<h2>{{hero.name}} details!</h2>
-<div><label>id: </label>{{hero.id}}</div>
-<div><label>name: </label> <input [(ngModel)]="hero.name" placeholder="name"></div>
-
-
-
+    -->
+    <h1>{{title}}</h1>
+    <h2>My Heroes</h2>
+    <ul class="heroes">
+      <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+      </li>
+    </ul>
+    <div *ngIf="selectedHero">
+      <h2>{{selectedHero.name}} details!</h2>
+      <div>
+        <label>id: </label>{{selectedHero.id}}</div>
+        <div>
+          <label>name: </label>
+            <!--
+                        [(ngModel)] is an example of: 2 way data binding
+                            between the Template and Class
+                    -->
+          <input [(ngModel)]="selectedHero.name" placeholder="name" />
+        </div>
+      </div>
