--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -1,13 +1,15 @@
 <div *ngIf="hero">
-    <h2>{{hero.name}} details!</h2>
-    <div>
-        <label>id: </label>{{hero.id}}</div>
-    <div>
-        <label>name: </label>
-        <!--
-                [(ngModel)] is an example of: 2 way data binding
-                  between the Template and Class
-        -->
-        <input [(ngModel)]="hero.name" placeholder="name" />
-    </div>
-</div>
+        <h2>{{hero.name}} details!</h2>
+        <div>
+          <label>id: </label>{{hero.id}}</div>
+        <div>
+          <label>name: </label>
+          <!--
+                  [(ngModel)] is an example of: 2 way data binding
+                    between the Template and Class
+          -->
+          <input [(ngModel)]="hero.name" placeholder="name" />
+        </div>
+        <button (click)="goBack()">Back</button>
+      </div>
+      
